#15081 closed bug (fixed)
listen() causes a socket to be "connected"
Reported by: | leorize | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Network & Internet/TCP | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #2967 | |
Platform: | All |
Description
Calling listen()
will assign a 0.0.0.0 peer to the socket, where as no connection has been accepted yet.
The demo below will describe the problem. To run:
$ gcc -o peerless -lnetwork peerless.c $ ./peerless
Expected result:
Exit code 0, no output
Got:
Expected ENOTCONN, got 0
Attachments (1)
Change History (10)
by , 6 years ago
Attachment: | peerless.c added |
---|
comment:1 by , 6 years ago
comment:2 by , 6 years ago
Is it really different from #2967?
Yea, that bug revolves around connect()
.
comment:5 by , 5 years ago
Blocked By: | 2967 added |
---|
comment:8 by , 5 years ago
Blocked By: | 2967 removed |
---|---|
Blocking: | 2967 added |
Resolution: | → fixed |
Status: | reopened → closed |
comment:9 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
Is it really different from #2967?