tcp/EnpointManager: invalidate peer address on SetPassive()

Setting a peer address causes getpeername() to believe that a
connection has already been established. This commit fixes that.

Closes #15081